--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "mssql": "^6.3.2",
     "multer": "^1.4.2",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "sequelize": "^6.6.2",
