feat: public updated

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "babel-node index.js --exec",
     "dev": "set NODE_ENV=development&& nodemon index.js --exec babel-node",
     "prod": "set NODE_ENV=production&& pm2 start build/index.js",
+    "build": "babel . --ignore node_modules,build,public --out-dir build",
     "dev-linux": "export NODE_ENV=development&& nodemon index.js --exec babel-node",
     "prod-linux": "export NODE_ENV=production&& pm2 start build/index.js"
   },
