--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "https": "^1.0.0",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mssql": "^6.3.2",
     "multer": "^1.4.2",
