--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "colors": "^1.4.0",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
+    "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
