--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.13.8",
     "@babel/node": "^7.13.0",
     "@babel/preset-env": "^7.13.9",
+    "axios": "^0.21.4",
     "babel-preset-stage-3": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
