--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# carpeta de archivos generados
+files/
+
 # TypeScript v1 declaration files
 typings/
 
