--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "babel-node index.js --exec",
     "dev": "set NODE_ENV=development&& nodemon index.js --exec babel-node",
     "prod": "set NODE_ENV=production&& pm2 start build/index.js",
-    "build": "babel . --ignore node_modules,build,public --out-dir build",
+    "test": "set NODE_ENV=test&& babel-node ./node_modules/mocha/bin/_mocha test/index.test.js --exit --exec",
+    "build": "babel . --ignore node_modules,build,public,test --out-dir build",
     "dev-linux": "export NODE_ENV=development&& nodemon index.js --exec babel-node",
     "prod-linux": "export NODE_ENV=production&& pm2 start build/index.js"
   },
@@ -22,6 +23,7 @@
     "axios": "^0.21.4",
     "babel-preset-stage-3": "^6.24.1",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.4",
     "colors": "^1.4.0",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
@@ -36,6 +38,7 @@
     "https": "^1.0.0",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.3",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mssql": "^6.3.2",
@@ -43,8 +46,10 @@
     "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
+    "pm2": "^5.1.2",
     "sequelize": "^6.6.2",
     "sequelize-auto": "^0.7.11",
+    "supertest": "^6.1.6",
     "tedious": "^11.0.4",
     "textversionjs": "^1.1.3",
     "underscore": "^1.12.0",
